--- a/pipilu/Base.lproj/Main.storyboard
+++ b/pipilu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HMZ-ff-BJP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="HMZ-ff-BJP">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
@@ -191,7 +191,7 @@
         <!--个人主页-->
         <scene sceneID="3Fd-n8-vMb">
             <objects>
-                <viewController id="ENW-C2-wdD" sceneMemberID="viewController">
+                <viewController id="ENW-C2-wdD" customClass="acountViewController" customModule="pipilu" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kwU-c9-JU8"/>
                         <viewControllerLayoutGuide type="bottom" id="pbJ-92-b15"/>
@@ -233,10 +233,17 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wo_xuanxiangkuang" translatesAutoresizingMaskIntoConstraints="NO" id="oeQ-8n-Tmd">
                                 <rect key="frame" x="209" y="299" width="81" height="53"/>
                             </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wet-pg-9vx">
+                                <rect key="frame" x="80" y="372" width="160" height="125"/>
+                                <color key="backgroundColor" red="1" green="0.7004303073" blue="0.2411871199" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="个人主页" id="veF-Lf-Pd7"/>
+                    <connections>
+                        <outlet property="view1" destination="wet-pg-9vx" id="4dK-8l-BEE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gfF-8t-wVU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
